--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="assets/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/icofont.min.css">
     <link rel="stylesheet" href="assets/css/nice-select.css">
+    <link rel="stylesheet" href="assets/css/animate-headline.css">
     <!--====== Default css ======-->
     <link rel="stylesheet" href="assets/css/default.css">
     <link rel="stylesheet" href="assets/css/slicknav.min.css">
@@ -172,7 +173,14 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h2 class="title">Learn Mobile App Design</h2>
+                    <h2 class="title cd-headline clip is-full-width">Learn Mobile
+                        <span class="cd-words-wrapper">
+                            <b class="is-visible">App Desing</b>
+                            <b>PSD Desing</b>
+                            <b>Template Desing</b>
+                            <b>Ux Design</b>
+                        </span>
+                    </h2>
                     <h4 class="sub-title">join with industry expert and Start learning <span>at home</span></h4>
                 </div>
             </div>
@@ -181,7 +189,7 @@
     <!-- hero area end -->
 
     <!-- course section start -->
-    <section class="courses-area pb-80">
+    <section class="courses-area pb-60">
         <div class="container">
             <div class="row mt-none-30">
                 <div class="col-lg-4 col-md-6">
@@ -361,6 +369,7 @@
     <script src="assets/js/jquery.slicknav.min.js"></script>
     <script src="assets/js/jquery.nice-select.min.js"></script>
     <script src="assets/js/lightcase.js"></script>
+    <script src="assets/js/animate-headline.js"></script>
     <!--========= main js =========-->
     <script src="assets/js/main.js"></script>
 </body>
