--- a/inner-page-after.html
+++ b/inner-page-after.html
@@ -376,7 +376,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 faqs">
-                    <h4 class="title">Faqs</h4>
+                    <h4 class="title">Faq</h4>
                     <div class="accordion" id="accordionExample">
                         <div class="card">
                             <div class="card-header" id="headingOne">
