--- a/profile-2.html
+++ b/profile-2.html
@@ -170,9 +170,9 @@
 
     <!-- user profile area start -->
     <section class="user-profile-area">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row no-gutters user-profile">
-                <div class="col-md-2 profile-left">
+                <div class="col-md-3 profile-left">
                     <div class="authore">
                         <div class="authore-img">
                             <img src="assets/images/blog-2.jpg" alt="">
@@ -195,7 +195,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-md-10 profile-right">
+                <div class="col-md-9 profile-right">
                     <div class="tab-content">
                         <div role="tabpanel" class="tab-pane fade in active show" id="tab-1">
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero itaque magnam deleniti
