--- a/inner-page-after.html
+++ b/inner-page-after.html
@@ -320,15 +320,15 @@
                         </div>
                         <div class="accordion course" id="courseExample">
                             <div class="card">
-                                <div class="card-header" id="headingOne">
+                                <div class="card-header" id="coursHeadingOne">
                                     <h5 class="mb-0 subtitle">
                                         <button class="btn btn-link" type="button" data-toggle="collapse"
-                                            data-target="#curseOne" aria-expanded="true" aria-controls="curseOne">
+                                            data-target="#curseOne" aria-expanded="false" aria-controls="curseOne">
                                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                         </button>
                                     </h5>
                                 </div>
-                                <div id="curseOne" class="collapse" aria-labelledby="headingOne"
+                                <div id="curseOne" class="collapse" aria-labelledby="coursHeadingOne"
                                     data-parent="#courseExample">
                                     <div class="card-body">
                                         <div class="course-videos">
@@ -393,15 +393,15 @@
                                 </div>
                             </div>
                             <div class="card">
-                                <div class="card-header" id="headingTwo">
+                                <div class="card-header" id="coursHeadingTwo">
                                     <h5 class="mb-0 subtitle">
                                         <button class="btn btn-link" type="button" data-toggle="collapse"
-                                            data-target="#courseTwo" aria-expanded="true" aria-controls="courseTwo">
+                                            data-target="#courseTwo" aria-expanded="false" aria-controls="courseTwo">
                                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                         </button>
                                     </h5>
                                 </div>
-                                <div id="courseTwo" class="collapse" aria-labelledby="headingTwo"
+                                <div id="courseTwo" class="collapse" aria-labelledby="coursHeadingTwo"
                                     data-parent="#courseExample">
                                     <div class="card-body">
                                         <div class="course-videos">
@@ -424,15 +424,15 @@
                                 </div>
                             </div>
                             <div class="card">
-                                <div class="card-header" id="headingThree">
+                                <div class="card-header" id="coursHeadingThree">
                                     <h5 class="mb-0 subtitle">
                                         <button class="btn btn-link" type="button" data-toggle="collapse"
-                                            data-target="#curseThree" aria-expanded="true" aria-controls="curseThree">
+                                            data-target="#curseThree" aria-expanded="false" aria-controls="curseThree">
                                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                         </button>
                                     </h5>
                                 </div>
-                                <div id="curseThree" class="collapse" aria-labelledby="headingThree"
+                                <div id="curseThree" class="collapse" aria-labelledby="coursHeadingThree"
                                     data-parent="#courseExample">
                                     <div class="card-body">
                                         <div class="course-videos">
@@ -458,7 +458,7 @@
                                 <div class="card-header" id="headingFour">
                                     <h5 class="mb-0 subtitle">
                                         <button class="btn btn-link" type="button" data-toggle="collapse"
-                                            data-target="#curseFour" aria-expanded="true" aria-controls="curseOne">
+                                            data-target="#curseFour" aria-expanded="false" aria-controls="curseOne">
                                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                         </button>
                                     </h5>
@@ -489,7 +489,7 @@
                                 <div class="card-header" id="headingFive">
                                     <h5 class="mb-0 subtitle">
                                         <button class="btn btn-link" type="button" data-toggle="collapse"
-                                            data-target="#curseFive" aria-expanded="true" aria-controls="curseFive">
+                                            data-target="#curseFive" aria-expanded="false" aria-controls="curseFive">
                                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                         </button>
                                     </h5>
