--- a/inner-page-before.html
+++ b/inner-page-before.html
@@ -317,7 +317,7 @@
                                         </button>
                                     </h5>
                                 </div>
-                                <div id="curseOne" class="collapse" aria-labelledby="coursHeadingOne"
+                                <div id="curseOne" class="collapse show" aria-labelledby="coursHeadingOne"
                                     data-parent="#courseExample">
                                     <div class="card-body">
                                         <div class="course-videos">
