--- a/inner-page-before.html
+++ b/inner-page-before.html
@@ -398,7 +398,7 @@
                                         </button>
                                     </h5>
                                 </div>
-                                <div id="courseTwo" class="collapse" aria-labelledby="coursHeadingTwo"
+                                <div id="courseTwo" class="collapse show" aria-labelledby="coursHeadingTwo"
                                     data-parent="#courseExample">
                                     <div class="card-body">
                                         <div class="course-videos">
@@ -431,7 +431,7 @@
                                         </button>
                                     </h5>
                                 </div>
-                                <div id="curseThree" class="collapse" aria-labelledby="coursHeadingThree"
+                                <div id="curseThree" class="collapse show" aria-labelledby="coursHeadingThree"
                                     data-parent="#courseExample">
                                     <div class="card-body">
                                         <div class="course-videos">
@@ -464,7 +464,7 @@
                                         </button>
                                     </h5>
                                 </div>
-                                <div id="curseFour" class="collapse" aria-labelledby="headingFour"
+                                <div id="curseFour" class="collapse show" aria-labelledby="headingFour"
                                     data-parent="#courseExample">
                                     <div class="card-body">
                                         <div class="course-videos">
@@ -497,7 +497,7 @@
                                         </button>
                                     </h5>
                                 </div>
-                                <div id="curseFive" class="collapse" aria-labelledby="headingFive"
+                                <div id="curseFive" class="collapse show" aria-labelledby="headingFive"
                                     data-parent="#courseExample">
                                     <div class="card-body">
                                         <div class="course-videos">
