--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                             <img src="assets/images/footer-logo.png" alt="">
                         </a>
                         <div class="tagline">
-                            <h4>Join to be Expert<span>copyright &copy; 2020 UX Club Bangladesh</span></h4>
+                            <h4>Join to be Expert<span>Copyright &copy; 2020, UX Club Bangladesh.</span></h4>
                         </div>
                     </div>
                 </div>
