--- a/inner-page-before.html
+++ b/inner-page-before.html
@@ -137,7 +137,12 @@
                                         <div class="log-inpagess">
                                             <div class="login-content">
                                                 <h4>Join to Start Learning</h4>
-
+                                                <div class="connect-facebook">
+                                                    <span>
+                                                        <a href=""><i class="fa fa-facebook-f"></i>Log In with
+                                                            facebook</a>
+                                                    </span>
+                                                </div>
                                                 <div class="loginforms1">
                                                     <form action="">
                                                         <div class="login-us">
@@ -145,7 +150,6 @@
                                                             <input type="email" placeholder="Email">
                                                             <input type="number" placeholder="Phone Number">
                                                             <input type="password" placeholder="Set Password">
-                                                            <input type="password" placeholder="Confirm Password">
                                                         </div>
                                                     </form>
                                                 </div>
@@ -165,7 +169,6 @@
                                 </div>
                             </div>
                         </div>
-
                         <!-- Modal -->
                     </div>
                 </div>
@@ -298,7 +301,7 @@
                                                                     </div>
                                                                 </div>
                                                             </div>
-                                                            <div class="col">
+                                                            <div class="col tshirt-img">
                                                                 <img src="assets/images/offer.png" alt="">
                                                             </div>
                                                         </div>
@@ -665,7 +668,7 @@
                             <img src="assets/images/footer-logo.png" alt="">
                         </a>
                         <div class="tagline">
-                            <h4>Join to be Expert<span>copyright &copy; 2020 UX Club Bangladesh</span></h4>
+                            <h4>Join to be Expert<span>Copyright &copy; 2020, UX Club Bangladesh.</span></h4>
                         </div>
                     </div>
                 </div>
