--- a/profile-1.html
+++ b/profile-1.html
@@ -136,7 +136,12 @@
                                         <div class="log-inpagess">
                                             <div class="login-content">
                                                 <h4>Join to Start Learning</h4>
-
+                                                <div class="connect-facebook">
+                                                    <span>
+                                                        <a href=""><i class="fa fa-facebook-f"></i>Log In with
+                                                            facebook</a>
+                                                    </span>
+                                                </div>
                                                 <div class="loginforms1">
                                                     <form action="">
                                                         <div class="login-us">
@@ -144,7 +149,6 @@
                                                             <input type="email" placeholder="Email">
                                                             <input type="number" placeholder="Phone Number">
                                                             <input type="password" placeholder="Set Password">
-                                                            <input type="password" placeholder="Confirm Password">
                                                         </div>
                                                     </form>
                                                 </div>
@@ -164,7 +168,6 @@
                                 </div>
                             </div>
                         </div>
-
                         <!-- Modal -->
                     </div>
                 </div>
@@ -253,7 +256,7 @@
                             <img src="assets/images/footer-logo.png" alt="">
                         </a>
                         <div class="tagline">
-                            <h4>Join to be Expert<span>copyright &copy; 2020 UX Club Bangladesh</span></h4>
+                            <h4>Join to be Expert<span>Copyright &copy; 2020, UX Club Bangladesh.</span></h4>
                         </div>
                     </div>
                 </div>
@@ -266,72 +269,6 @@
             </div>
         </div>
     </footer>
-
-    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-        <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="headingOne">
-                <h4 class="panel-title">
-                    <a role="button" data-toggle="collapse" href="#collapseOne" aria-expanded="true"
-                        aria-controls="collapseOne">
-                        Collapsible Group Item #1
-                    </a>
-                </h4>
-            </div>
-            <div id="collapseOne" class="panel-collapse collapse in show" role="tabpanel" aria-labelledby="headingOne">
-                <div class="panel-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
-                    richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
-                    quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put
-                    a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh
-                    helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur
-                    butcher vice lomo. Leggings occaecat craft beer farm-to-table,
-                    raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable
-                    VHS.</div>
-            </div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="headingTwo">
-                <h4 class="panel-title">
-                    <a class="collapsed" role="button" data-toggle="collapse" href="#collapseTwo" aria-expanded="false"
-                        aria-controls="collapseTwo">
-                        Collapsible Group Item #2
-                    </a>
-                </h4>
-
-            </div>
-            <div id="collapseTwo" class="panel-collapse collapse in show" role="tabpanel" aria-labelledby="headingTwo">
-                <div class="panel-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
-                    richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
-                    quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put
-                    a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh
-                    helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur
-                    butcher vice lomo. Leggings occaecat craft beer farm-to-table,
-                    raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable
-                    VHS.</div>
-            </div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="headingThree">
-                <h4 class="panel-title">
-                    <a class="collapsed" role="button" data-toggle="collapse" href="#collapseThree"
-                        aria-expanded="false" aria-controls="collapseThree">
-                        Collapsible Group Item #3
-                    </a>
-                </h4>
-
-            </div>
-            <div id="collapseThree" class="panel-collapse collapse in show" role="tabpanel"
-                aria-labelledby="headingThree">
-                <div class="panel-body">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
-                    richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
-                    quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put
-                    a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh
-                    helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur
-                    butcher vice lomo. Leggings occaecat craft beer farm-to-table,
-                    raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable
-                    VHS.</div>
-            </div>
-        </div>
-    </div>
 
     <!--========= jquery js =========-->
     <script src="assets/js/jquery-2.2.4.min.js"></script>
