--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                             <h4 class="title">Learn Mobile App Design</h4>
                         </a>
                         <p>Learn Mobile App Design with real project
-                            and copyright &copy; 2020 UX Club Bangladesh</p>
+                            with proper guideline</p>
                         <span class="course-meta">
                             <i class="fa fa-exclamation-circle" aria-hidden="true"></i> 30
                             Class with Project
