--- a/inner-page-after.html
+++ b/inner-page-after.html
@@ -656,7 +656,7 @@
                 </div>
                 <div class="col-lg-6 my-auto">
                     <div class="footer-right">
-                        <a href="tel:01743196240" class="call-button"><span>Have any question?</span> : 01743 196
+                        <a href="tel:01743196240" class="call-button"><span>Have any question?</span> 01743 196
                             240</a>
                         <a href="#" class="fb-button"><span>Join us on</span> facebook</a>
                     </div>
