--- a/inner-page-after.html
+++ b/inner-page-after.html
@@ -221,7 +221,7 @@
                                 <li><i class="icofont-star"></i> Based on Professional Guide</li>
                                 <li><i class="icofont-coffee-cup"></i> Course for Beginner</li>
                                 <li><i class="icofont-badge"></i> Includes certificate on this course</li>
-                                <li><i class="icofont-taka"></i> Fee Tk. 3000</li>
+                                <li><i class="icofont-tag"></i> Fee Tk. 3000</li>
                             </ul>
                             <a href="#" class="site-btn course" data-toggle="modal"
                                 data-target="#exampleModalCenter3">Get full Course</a>
