--- a/inner-page-before.html
+++ b/inner-page-before.html
@@ -221,7 +221,7 @@
                                 <li><i class="icofont-star"></i> Based on Professional Guide</li>
                                 <li><i class="icofont-coffee-cup"></i> Course for Beginner</li>
                                 <li><i class="icofont-badge"></i> Includes certificate on this course</li>
-                                <li><i class="icofont-taka"></i> Fee Tk. 3000</li>
+                                <li><i class="icofont-tag"></i> Fee Tk. 3000</li>
                             </ul>
                             <a href="#" class="site-btn course" data-toggle="modal"
                                 data-target="#exampleModalCenter3">Get full Course</a>
@@ -376,7 +376,8 @@
                                                     </div>
                                                 </div>
                                                 <div class="single-video-right">
-                                                    <a href="#" class="site-btn preview">Preview</a>
+                                                    <a href="#" class="site-btn preview" data-toggle="modal"
+                                                        data-target="#exampleModalCenter3">Join Now</a>
                                                 </div>
                                             </div>
                                             <div class="single-videos">
@@ -392,7 +393,8 @@
                                                     </div>
                                                 </div>
                                                 <div class="single-video-right">
-                                                    <a href="#" class="site-btn preview">Preview</a>
+                                                    <a href="#" class="site-btn preview" data-toggle="modal"
+                                                        data-target="#exampleModalCenter3">Join Now</a>
                                                 </div>
                                             </div>
                                             <div class="single-videos">
@@ -408,7 +410,8 @@
                                                     </div>
                                                 </div>
                                                 <div class="single-video-right">
-                                                    <a href="#" class="site-btn preview">Preview</a>
+                                                    <a href="#" class="site-btn preview" data-toggle="modal"
+                                                        data-target="#exampleModalCenter3">Join Now</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -442,7 +445,8 @@
                                                     </div>
                                                 </div>
                                                 <div class="single-video-right">
-                                                    <a href="#" class="site-btn preview">Preview</a>
+                                                    <a href="#" class="site-btn preview" data-toggle="modal"
+                                                        data-target="#exampleModalCenter3">Join Now</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -476,7 +480,8 @@
                                                     </div>
                                                 </div>
                                                 <div class="single-video-right">
-                                                    <a href="#" class="site-btn preview">Preview</a>
+                                                    <a href="#" class="site-btn preview" data-toggle="modal"
+                                                        data-target="#exampleModalCenter3">Join Now</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -510,7 +515,8 @@
                                                     </div>
                                                 </div>
                                                 <div class="single-video-right">
-                                                    <a href="#" class="site-btn preview">Preview</a>
+                                                    <a href="#" class="site-btn preview" data-toggle="modal"
+                                                        data-target="#exampleModalCenter3">Join Now</a>
                                                 </div>
                                             </div>
                                         </div>
