--- a/course-inner-page.html
+++ b/course-inner-page.html
@@ -42,10 +42,10 @@
     <section class="course-video course-inner-page">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-5">
+                <div class="col-md-4">
                     <div class="course-page-heading">
                         <a href="index.html" class="course-page-logo"><img src="assets/images/logo.png" alt=""></a>
-                        <h2 class="title">Start Learning</h2>
+                        <h2 class="title">Lesson</h2>
                         <a href="#" class="site-btn">Go Back</a>
                         <a href="#" class="collapse-bt"><i class="icofont-simple-left"></i></a>
                     </div>
@@ -149,7 +149,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-7">
+                <div class="col-md-8">
                     <div class="tab-content">
                         <div role="tabpanel" class="tab-pane fade in active show" id="tab-1">
                             <div class="single-video-left video-title">
